--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PONG</title>
+    <title>Plat</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +11,7 @@
 
     <!-- Utils -->
     <script src="Utils/linkedList.js"></script>
+    <script src="Utils/ray.js"></script>
 
     <script src="Engine/DEFINE.js"></script>
     <script src="Engine/engine.js"></script>
