--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="Engine/collider.js"></script>
     <script src="Engine/elements.js"></script>
     <script src="game.js"></script>
+    <script src="level.js"></script>
     <script src="main.js"></script>
     
 </body>
