double dash, checkpoint, death

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <script src="Engine/scene.js"></script>
     <script src="Engine/collider.js"></script>
     <script src="Engine/elements.js"></script>
-    <script src="light.js"></script>
+    <script src="Components/components.js"></script>
+    <script src="Components/light.js"></script>
     <script src="game.js"></script>
     <script src="level.js"></script>
     <script src="main.js"></script>
