--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <canvas></canvas>
+    <div id="wrapper">
+        <div id="restarts"></div>
+        <div id="midMsg"></div>
+    </div>
 
     <!-- Utils -->
     <script src="Utils/linkedList.js"></script>
