--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div id="wrapper">
         <div id="restarts"></div>
         <div id="midMsg"></div>
+        <div id="lowMsg">Press Escape to Pause...</div>
+        <div id="menu">
+            <div id="yap">click?</div>
+        </div>
     </div>
 
     <!-- Utils -->
@@ -26,6 +30,7 @@
     <script src="Components/components.js"></script>
     <script src="Components/light.js"></script>
     <script src="game.js"></script>
+    <script src="settingPages.js"></script>
     <script src="level.js"></script>
     <script src="main.js"></script>
     
