--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div id="lowMsg">Press Escape to Pause...</div>
         <div id="menu">
             <div id="yap">click?</div>
+            <div id="amenu">
+                <div onclick="unpause()" id="start">Start</div>
+                <div onclick="muteTog()" id="mute">Mute</div>
+            </div>
         </div>
     </div>
 
